--- a/src/staticfiles/assets/css/home.css
+++ b/src/staticfiles/assets/css/home.css
@@ -31,25 +31,50 @@
 /* navbar end */
 
 /* BANNER START */
-.banner-content{
+.banner{
+    width: 100vw;
+    height: auto;
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+.banner-img{
+    /* width: 100vw;
+    height: 800px; */
+}
+.banner-img img{
+    width: 100vw;
+    height: auto;
+    max-height: 1000px;
+    max-width: 100vw;
+    object-fit: cover;
+}
+.banner-content-x{
+    position: absolute;
+    top: 50%;
+    z-index: 5;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     justify-content: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: -30px;
+    text-align: center;
 }
 .banner-title{
-    font-size: 60px;
+    font-size: 4vw;
     font-family: 'Monoton' !important;
     color: var(--color-sec) !important;
     font-weight:100 !important;
     word-spacing: 25px;
 }
 .banner-subtitle{
-    font-size: 30px !important;
+    font-size: 2vw !important;
     font-weight: 200 !important;
     font-family: 'Roboto' !important;
     text-transform: uppercase !important;
+    color:white;
 }
 .search-form{
     display: flex;
@@ -108,3 +133,171 @@
 
 
 /* BANNER END */
+
+
+/* media query  start*/
+@media only screen and (max-width:1199px){
+    .banner-content{
+        margin-top:30%;
+    }
+}
+/* media query  end*/
+
+
+/* preloader start */
+body{
+    margin:0 !important;
+    padding:0 !important;
+    box-sizing: border-box;
+}
+.preloader-container{
+    width: 100%;
+    height: 100vh;
+    background-color: #a5d8d8;
+    position: fixed;
+    top: 0;
+    z-index: 1000000000000000;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;;
+}
+.preloader{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.preloader h1{
+    font-size: 30px;
+    font-weight: 500;
+    color: white;
+}
+.preloader svg{
+    min-width: 500px;
+    min-height: 300px;
+    max-width: 1000px;
+    max-height: 600px;
+}
+
+/* preloader animation start */
+.preloader {
+	height: 100vh;
+	width: 100vw;
+	/* background-color: #87ceeb; */
+	/* background-color: #63e5e5; */
+	background-color: #a5d8d8;
+}
+
+.main svg {
+	height: 70vh;
+	width: 70vw;
+}
+
+#right-wheel,
+#left-wheel {
+	animation: wheel 1.5s linear infinite;
+	transform-origin: center;
+	transform-box: fill-box;
+}
+
+#truck {
+	animation: truck 0.5s ease-in-out infinite alternate;
+	transform-origin: bottom;
+}
+#road {
+	animation: road 2s linear infinite;
+}
+
+@keyframes wheel {
+	from {
+		transform: rotateZ(0deg) translateY(0);
+	}
+	to {
+		transform: rotateZ(360deg) translateY(2px);
+	}
+}
+
+@keyframes truck {
+	from {
+		transform: translate(0px, 0px);
+	}
+	to {
+		transform: translate(10px, 2px);
+	}
+}
+
+@keyframes road {
+	from {
+		transform: translateX(100%);
+	}
+	to {
+		transform: translateX(-90%);
+	}
+}
+
+#cloud {
+	animation: cloud 4s linear infinite;
+}
+#cloud1 {
+	animation: cloud 4s linear infinite 2.2s;
+}
+#cloud2 {
+	animation: cloud 4s linear infinite 3s;
+}
+
+@keyframes cloud {
+	from {
+		transform: translateX(100%);
+	}
+	to {
+		transform: translateX(-100%);
+	}
+}
+
+#Vector_4 {
+	animation: star 2.5s linear infinite;
+	transform-origin: center;
+	transform-box: fill-box;
+}
+
+@keyframes star {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(20deg);
+	}
+}
+#Vector_6 {
+	animation: Vector_6 1.4s ease infinite alternate;
+}
+@keyframes Vector_6 {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+#Vector_5 {
+	animation: Vector_7 6.5s ease infinite;
+}
+
+#Vector_7 {
+	animation: Vector_7 6.5s ease infinite;
+}
+
+@keyframes Vector_7 {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(50deg);
+	}
+}
+
+/* preloader animation end */
+/* preloader end */
