--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -37,6 +37,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <!-- jquery-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!--aos-->
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         {% comment %} <link rel="stylesheet" href="{% static 'assets/css/user_profile.css' %}"> {% endcomment %}
         <!--fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -46,8 +48,14 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     </head>
     <body>
+        <!--preloader-->
+        <div class="preloader-container">
+            <div class="preloader">
+                {% include "partials/preloader.html" %}
+                <h1>Loading...</h1>
+            </div>
+        </div>
         <!-- header start -->
-        {% comment %} {% include 'partials/_header.html' %} {% endcomment %}
         {% include 'partials/top_header.html' %} 
         <header class="header-area" id="headbar-cross">
             {% comment %} {% include 'partials/mid_header.html' %} {% endcomment %}
@@ -76,6 +84,17 @@
         <!--custom vendor js-->
         {% comment %} <script  type="text/javascript" src="{% static 'assets/js/vendor/store_detail_ajax.js' %}"></script> {% endcomment %}
         <script  type="text/javascript" src="{% static 'assets/js/vendor/test.js' %}"></script>
-        
+        <!--AOS-->    
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+        <!--preloader jquery-->
+        <script>
+            $(window).on("load",function(){
+                console.log("its loading");
+                $('.preloader-container').fadeOut(200);
+            })
+        </script>
     </body>
 </html>
