--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -41,6 +41,82 @@
             </div> {% endcomment %}
         {% comment %} </div> {% endcomment %}
     {% comment %} </div> {% endcomment %}
+    <!--todo-->
+        <div class='container mt-50 mb-100 banne-two'>
+            <div class='row flex-column-reverse flex-md-row'>
+                <div class="col-sm-12 col-md-6 banner-two-left">
+                    <h1>tawsil express</h1>
+                    <p class="subtitle">YOUR DELIVERY PARTNER</p>
+                    <p class="banner-two-left-details mb-40">
+                        TAWSIL EXPRESS aims to aid Bangladesh’s expanding e-commerce sector by providing techfirst logiscs support. With exclusive features and a talented workforce, TAWSIL EXPRESS gives the delivery service industry of Bangladesh a brand new pace.
+                    </p>
+                    <a href="#">become merchent</a>
+                </div>
+                <div class="col-sm-12 col-md-6 banner-two-right">
+                    <img src="{% static 'home/Moving-Truck-Vector.png' %}" alt="banner two img">
+                </div>
+            </div>
+
+            <!--working start-->
+            <div class="popular-cousine mt-30">
+                {% comment %} <img src="{% static 'home/top banner.png' %}" alt="" class="top-banner"> {% endcomment %}
+                <img src="{% static 'home/cousine-banner.png' %}" alt="" class="top-banner">
+                
+                <div class='row justify-content-start align-items-center cousine mt-20'>
+                    <div class='col-md-4 col-sm-6 col-lg-3 card-x' style="width: 18rem;">
+                        <div class="card-body" style="text-align:center">
+                            <img class="card-img-top" src="{% static 'home/item.jpg' %}" style="border-radius:10px; width:215px; height:250px; object-fit:cover;" alt="Card image cap">
+                            <p class="card-text mb-20" style="font-size: 20px;font-weight: 700;padding-top: 10px;text-align: center;text-transform:uppercase;">
+                            indian food
+                            </p>
+                            <a href="#" style="text-transform: uppercase;color: var(--color-pri);font-size:20px;font-weight: 700;background: var(--color-sec);padding: 7px 14px;border-radius: 5px;">explore</a>
+                        </div>
+                    </div>
+
+                    <div class='col-md-4 col-sm-6 col-lg-3 card-x' style="width: 18rem;">
+                        <div class="card-body" style="text-align:center">
+                            <img class="card-img-top" src="{% static 'home/item1.jpg' %}" style="border-radius:10px; width:215px; height:250px; object-fit:cover;" alt="Card image cap">
+                            <p class="card-text mb-20" style="font-size: 20px;font-weight: 700;padding-top: 10px;text-align: center;text-transform:uppercase;">
+                            fast food
+                            </p>
+                            <a href="#" style="text-transform: uppercase;color: var(--color-pri);font-size:20px;font-weight: 700;background: var(--color-sec);padding: 7px 14px;border-radius: 5px;">explore</a>
+                        </div>
+                    </div>
+
+                    <div class='col-md-4 col-sm-6 col-lg-3 card-x' style="width: 18rem;">
+                        <div class="card-body" style="text-align:center">
+                            <img class="card-img-top" src="{% static 'home/desert.jpg' %}" style="border-radius:10px; width:215px; height:250px; object-fit:cover;" alt="Card image cap">
+                            <p class="card-text mb-20" style="font-size: 20px;font-weight: 700;padding-top: 10px;text-align: center;text-transform:uppercase;">
+                            indian food
+                            </p>
+                            <a href="#" style="text-transform: uppercase;color: var(--color-pri);font-size:20px;font-weight: 700;background: var(--color-sec);padding: 7px 14px;border-radius: 5px;">explore</a>
+                        </div>
+                    </div>
+                    <div class='col-md-4 col-sm-6 col-lg-3 card-x' style="width: 18rem;">
+                        <div class="card-body" style="text-align:center">
+                            <img class="card-img-top" src="{% static 'home/item.jpg' %}" style="border-radius:10px; width:215px; height:250px; object-fit:cover;" alt="Card image cap">
+                            <p class="card-text mb-20" style="font-size: 20px;font-weight: 700;padding-top: 10px;text-align: center;text-transform:uppercase;">
+                            indian food
+                            </p>
+                            <a href="#" style="text-transform: uppercase;color: var(--color-pri);font-size:20px;font-weight: 700;background: var(--color-sec);padding: 7px 14px;border-radius: 5px;">explore</a>
+                        </div>
+                    </div>
+
+                    <div class='col-md-4 col-sm-6 col-lg-3 card-x' style="width: 18rem;">
+                        <div class="card-body" style="text-align:center">
+                            <img class="card-img-top" src="{% static 'home/item.jpg' %}" style="border-radius:10px; width:215px; height:250px; object-fit:cover;" alt="Card image cap">
+                            <p class="card-text mb-20" style="font-size: 20px;font-weight: 700;padding-top: 10px;text-align: center;text-transform:uppercase;">
+                            indian food
+                            </p>
+                            <a href="#" style="text-transform: uppercase;color: var(--color-pri);font-size:20px;font-weight: 700;background: var(--color-sec);padding: 7px 14px;border-radius: 5px;">explore</a>
+                        </div>
+                    </div>
+                </div>    
+            </div>
+
+        </div>
+    <!--working end-->
+
 
     <div class="banner-area row-col-decrease pt-100 pb-75 clearfix">
         <div class="container">
@@ -893,6 +969,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="banner-area">
             <div class="container">
                 <div class="discount-overlay bg-img pt-130 pb-130" ><!--style="background-image:url(assets/images/banner/banner-4.jpg);"-->
