--- a/static_cdn/static_root/assets/css/style.css
+++ b/static_cdn/static_root/assets/css/style.css
@@ -1973,7 +1973,7 @@ textarea:focus {
 }
 .transparent-bar.stick {
     margin-top:58px;
-    animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
+    animation: 400ms ease-in-out 0s normal none 1 running fadeInDown !important;
     /* background-color: #fff; */
     color: #fff !important;
     border-bottom: 0 solid #4a90e2;
@@ -1983,6 +1983,7 @@ textarea:focus {
     width: 100%;
     z-index: 100;
 }
+
 #navbar-cross{
     /* margin-top:0px; */
 }
