--- a/src/staticfiles/assets/css/home.css
+++ b/src/staticfiles/assets/css/home.css
@@ -46,16 +46,17 @@
 .banner-img img{
     width: 100vw;
     height: auto;
-    max-height: 1000px;
+    /* max-height: 1000px; */
+    max-height: 100vh;
     max-width: 100vw;
     object-fit: cover;
 }
 .banner-content-x{
     position: absolute;
-    top: 50%;
+    top: 30%;
     z-index: 5;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -30%);
 
     justify-content: center;
     display: flex;
@@ -201,10 +202,104 @@
     /* margin:6px; */
 }
 
+.cousine_show_all{
+    display: block;
+    margin: 0;
+    text-align: center;
+    margin-top: 60px;
+}
+.cousine_show_all a{
+    text-transform: uppercase;
+    color: var(--color-pri);
+    background: var(--color-sec);
+    padding: 12px 22px;
+    border-radius: 5px;
+    font-weight: 700;
+}
+.card-body > a:hover{
+    outline: none;
+    color: var(--color-pri);
+    text-decoration: none;
+    box-shadow: 0px 0px 1px 5px rgba(0,0,0,0.124);
+}
+.cousine_show_all a:hover{
+    outline: none;
+    color: var(--color-pri);
+    text-decoration: none;
+    box-shadow: 0px 0px 1px 5px rgba(0,0,0,0.124);
+}
 
 
 /* popular cousine end */
 
+/* prepare food start */
+.prepare-food{}
+.prepare-food-left{
+	padding: 0 !important;
+	margin: 0 !important;
+}
+.prepare-food-left img{
+	width: 100.17%;
+    height: 700px;
+    padding: 0;
+    margin: 0;
+}
+.prepare-food-right{
+	background-color: blue;
+
+}
+.prepare-food-title{
+    padding-top: 20px;
+    padding-bottom: 30px;
+    color: var(--color-pri);
+    font-size: 35px;
+    margin: 0 auto;
+    font-weight: 500;
+}
+
+.prepare-food-left-details{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    /* transform: translate(-20%, -25%); */
+    z-index: 6;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.prepare-food-left-details-p1{
+    color: var(--color-sec);
+    font-size: 20px;
+    font-weight: 400;
+}
+.prepare-food-left-details-p2{
+    font-family: 'Monoton';
+    font-size: 40px;
+    color: var(--color-sec);
+}
+.left-desc{}
+.left-desc-one{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.left-desc-one-icon{
+    font-size: 30px;
+    color: var(--color-sec);
+}
+.left-desc-one-details{
+    font-family: 'Roboto';
+    font-weight: 100;
+    font-size: 14px;
+    color: white;
+    text-align: left;
+}
+/* prepare food end */
 
 /* media query  start*/
 @media only screen and (max-width:1199.99px){
