--- a/src/staticfiles/assets/css/home.css
+++ b/src/staticfiles/assets/css/home.css
@@ -44,7 +44,7 @@
     height: 800px; */
 }
 .banner-img img{
-    width: 100vw;
+    width: 100%;
     height: auto;
     /* max-height: 1000px; */
     max-height: 100vh;
@@ -206,13 +206,15 @@
     display: block;
     margin: 0;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
 .cousine_show_all a{
     text-transform: uppercase;
     color: var(--color-pri);
     background: var(--color-sec);
-    padding: 12px 22px;
+    padding: 8px 16px;
     border-radius: 5px;
     font-weight: 700;
 }
