update home page

--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -68,6 +68,7 @@
     <!--popular cousine start-->
     {% include "home/popularCousine.html" %}
     <!--popular cousine end-->
+
     <div class='container'>
         <!--prepare food start-->
             <h1 class="prepare-food-title  mt-50 text-center">YOU PREPARE THE FOOD WE HANDLE THE REST</h1>
@@ -98,7 +99,9 @@
             <!--prepare food end-->
     </div>
     <!--working end-->
-
+    <!-- best food start-->
+    {% include "home/bestFood.html" %}
+    <!-- best food end-->
 
     <div class="banner-area row-col-decrease pt-100 pb-75 clearfix">
         <div class="container">
