--- a/src/templates/home/popularCousine.html
+++ b/src/templates/home/popularCousine.html
@@ -1,10 +1,13 @@
 {% load static %}
 <div class=" product-area pb-70">
+    <div class="container-fluid p-0">
+        <div class="product-tab-list nav">
+            <img src="{% static 'home/cousine-banner.png' %}" alt="" class="top-banner w-100">
+        </div>
+    </div>
     <div class="custom-container-x container">
         <div class="product-tab-list-wrap text-center mb-40">
-            <div class="product-tab-list nav">
-                <img src="{% static 'home/cousine-banner.png' %}" alt="" class="top-banner">
-            </div>
+            
             <p>Typi non habent claritatem insitam est usus legentis in qui facit eorum claritatem, investigationesdemonstraverunt lectores legere me lius quod legunt saepius.</p>
         </div>
         <div class="tab-content jump">
