--- a/src/templates/home/bestFood.html
+++ b/src/templates/home/bestFood.html
@@ -1,18 +1,18 @@
 {% load static %}
 <div class="best-food-area pt-100 pb-95">
-    <div class="custom-container">
+    <div class="custom-container-x container">
         <div class="row">
-            <div class="best-food-width-1">
+            {% comment %} <div class="best-food-width-1">
                 <div class="single-banner">
                     <div class="hover-style">
                         <a href="#"><img src="{% static 'assets/images/banner/banner-5.jpg' %}" alt=""></a>
                     </div>
                 </div>
-            </div>
-            <div class="best-food-width-2">
+            </div> {% endcomment %}
+            <div class="best-food-width-x">
                 <div class="product-top-bar section-border mb-25">
                     <div class="section-title-wrap">
-                        <h3 class="section-title section-bg-white">Best Food In Our Shop</h3>
+                        <h3 class="section-title section-bg-white">Popular Search</h3>
                     </div>
                     <div class="product-tab-list-2 nav section-bg-white">
                         <a class="active" href="#tab4" data-toggle="tab">
@@ -335,13 +335,13 @@
                     </div>
                 </div>
             </div>
-            <div class="best-food-width-1 mrg-small-35">
+            {% comment %} <div class="best-food-width-1 mrg-small-35">
                 <div class="single-banner">
                     <div class="hover-style">
                         <a href="#"><img src="{% static 'assets/images/banner/banner-6.jpg' %}" alt=""></a>
                     </div>
                 </div>
-            </div>
+            </div> {% endcomment %}
         </div>
     </div>
 </div>
