--- a/src/templates/home/popularCousine.html
+++ b/src/templates/home/popularCousine.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class=" product-area pb-70">
-    <div class="container-fluid p-0">
+    <div class="container p-0">
         <div class="product-tab-list nav">
             <img src="{% static 'home/cousine-banner.png' %}" alt="" class="top-banner w-100">
         </div>
