--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -47,10 +47,10 @@
         <!--popular cousine end-->
     
         <!--prepare food start-->
-        <h1 class="prepare-food-title  mt-50 text-center">YOU PREPARE THE FOOD WE HANDLE THE REST</h1>
+        <h1 class="prepare-food-title  mt-50 text-center color-sec ">YOU PREPARE THE FOOD WE HANDLE THE REST</h1>
         <div class="row prepare-foodflex-column-reverse flex-md-row">
             <div class="col-sm-12 col-md-6 prepare-food-left p-0 m-0">
-                <img src="{% static "home/foodpre.png" %}" alt="">
+                <img src="{% static "home/foodpre.png" %}" alt="" style="object-fit:cover;">
                 <div class="prepare-food-left-details">
                     <p class="prepare-food-left-details-p1">LIST YOUR RESTAURANT ON </p>
                     <p class="prepare-food-left-details-p2">tawsil</p>
@@ -64,11 +64,11 @@
                             <p class="left-desc-one-details m-0 p-0">It's simple: we list your menu online, help you process orders, pick them up, and deliver them to your customer</p>
                         </div>
                     </div>
-                    <p class="">Interested? Let's start our </br>partnership today!</p>
+                    <p class="pt-10 color-sec">Interested? Let's start our </br>partnership today!</p>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 prepare-food-right p-0 m-0">
-                <img src="{% static 'home/vita-marija-murenaite-OV_kIcdrgCs-unsplash.jpg' %}" class="w-100" style="height:700px" alt="">
+                <img src="{% static 'home/vita-marija-murenaite-OV_kIcdrgCs-unsplash.jpg' %}" class="w-100" style="height:500px; object-fit:cover" alt="">
                 {% comment %} <img src="{% static 'home/lum3n-cHc5H3_FKhs-unsplash.jpg' %}" class="w-100" style="height:700px" alt=""> {% endcomment %}
             </div>
         </div>
