--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -6,35 +6,14 @@
 		</div>
 		<div class="container">
 			<div class="row-x">
-				<div style="
-					display: flex;
-					align-items: center;
-					justify-content: center; 
-					text-align:center; 
-					margin-top:14px;
-					gap:20px;
-				">
+				<div class="top-bar-content">
 					<i style="
 						font-size: 26px;
 						color: var(--color-sec);
 					"class="fas fa-motorcycle p-0 m-0" 
 					></i>
-					<p style="
-						font-size: 24px;
-						font-weight: 600;
-						font-family: 'Roboto';
-						color:var(--color-sec);
-					" class="p-0 m-0" >JOIN OUR RIDE TEAM!</p>
-					<a style="
-						color: var(--bg-pri-dark);
-						padding: 6px 12px !important;
-						background: var(--color-sec);;
-						text-align: center;
-						text-transform: uppercase;
-						border-radius: 5px;
-						font-size: 14px;
-						font-weight: 700;
-					"href="#" class="m-0 p-0">Apply Now</a>
+					<p class="p-0 m-0 top-bar-dialog" >JOIN RIDE TEAM!</p>
+					<a href="#" class=" top-bar-apply">Apply Now</a>
 				</div>
 				{% comment %} <div class="col-lg-4 col-md-4 col-12 col-sm-4">
 					<div class="welcome-area">
